fixup! bpo-44655: Include the name of the type in unset __slots__ attribute errors